platform/networking/traefik-internal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-internal
  labels:
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
